cabal-version: 1.12

name:           todo-hs
version:        0.1.0.0
build-type:     Simple
extra-source-files:
    README.md


library
  hs-source-dirs:
      src/lib
  exposed-modules:
      Todo
  other-modules:
      Paths_todo_hs
  build-depends:
      base
  default-language: Haskell2010
  ghc-options: -Wall -Werror


executable todo-hs-cli
  hs-source-dirs:
      src/cli
  main-is: Main.hs
  other-modules:
      Paths_todo_hs
  build-depends:
      base
    , todo-hs
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror


executable todo-hs-snap
  hs-source-dirs:
      src/snap
  main-is: Main.hs
  other-modules:
      Paths_todo_hs
  build-depends:
      base
    , todo-hs
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror


executable todo-hs-spock
  hs-source-dirs:
      src/spock
  main-is: Main.hs
  other-modules:
      Paths_todo_hs
  build-depends:
      base
    , todo-hs
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror


executable todo-hs-yesod
  hs-source-dirs:
      src/yesod
  main-is: Main.hs
  other-modules:
      Paths_todo_hs
  build-depends:
      base
    , todo-hs
  default-language: Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror


test-suite todo-hs-test
  hs-source-dirs:
      src/test
  main-is: Main.hs
  other-modules:
      Paths_todo_hs
  type: exitcode-stdio-1.0
  build-depends:
      base
    , todo-hs
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
