cabal-version: 2.2

name: todo-hs
version: 0.1.0.0
build-type: Simple
extra-source-files: README.md

common common
  build-depends: base, text, time
  default-language: Haskell2010
  default-extensions:
      DataKinds
      DeriveFunctor
      DerivingVia
      FlexibleInstances
      KindSignatures
      MultiParamTypeClasses
      OverloadedStrings
      RecordWildCards
      TypeApplications
      TypeFamilies
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall

library
  import: common
  hs-source-dirs: src/lib
  exposed-modules: Todo
  other-modules: Todo.Display, Todo.Enum
  visibility: private
  build-depends: containers

executable cli
  import: common
  hs-source-dirs: src/cli
  main-is: Main.hs
  build-depends: todo-hs, mtl, random

executable snap
  import: common
  hs-source-dirs: src/snap
  main-is: Main.hs
  build-depends: todo-hs

executable spock
  import: common
  hs-source-dirs: src/spock
  main-is: Main.hs
  build-depends: todo-hs

executable yesod
  import: common
  hs-source-dirs: src/yesod
  main-is: Main.hs
  build-depends: todo-hs

test-suite test
  import: common
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends: todo-hs
